Fixed bug where user profile wouldn't update when changing between different user pages. Added scrollbar to each movie row. Extended expire timeout for UserSessions.

--- a/movie-database-app/src/sass/App.scss
+++ b/movie-database-app/src/sass/App.scss
@@ -116,7 +116,10 @@ body {
 }
 
 .movie-list::-webkit-scrollbar {
-    display: none;
+    background-color: $card-color;
+}
+.movie-list::-webkit-scrollbar-thumb {
+    background-color: $warning;
 }
 
 .movie-card {
@@ -131,11 +134,12 @@ body {
 
     img {
         min-height: 320px;
-        max-height: 320px;;
+        max-height: 320px;
         object-fit: contain;
     }
 
     .card {
+        cursor: pointer;
         min-height: 500px;
         max-height: 550px;
         width: 270px;
